vertex api update
